syntax = "proto3";

package sfc_team;

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.General.Get";

message GetTeamRequest
{
    int64 id = 1;
}