syntax = "proto3";

package sfc_team;

import "Messages/Team/General/Get/get_team_request.proto";
import "Messages/Team/General/Get/get_team_response.proto";
import "Messages/Team/General/Find/get_teams_request.proto";
import "Messages/Team/General/Find/get_teams_response.proto";

option csharp_namespace = "SFC.Team.Contracts.Services";

service TeamService {
    rpc GetTeam(GetTeamRequest) returns (GetTeamResponse);
    rpc GetTeams(GetTeamsRequest) returns (GetTeamsResponse);
}